# evolv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
header/: evolv.hpp  source.hpp
include/: evolv.hpp
pymodule/: Makefile  pymodule.cc  pymodule.cpp
source/: rember_chain.cpp
source/common/: fenwick.cpp  fenwick.hpp
sources/: evolv.cpp  fenwick.cpp  fenwick.hpp  matrix_transit.cpp  matrix_transit.hpp  sparse_transit.cpp
src/: evolv.h  markov_chain.h
src/cc/: encoding_iter.cc  evolv.cc  fenwick_tree.cc  forgor_chain.cc  rember_chain.cc  state_coder.cc
src/h/: base_chain.h  encoding_iter.h  fenwick_tree.h  forgor_chain.h  rember_chain.h  state_coder.h
src/impl/: base_chain.h  chain_impl.cc  chain_impl.h  encoding_iter.h  fenwick_tree.cc  fenwick_tree.h  forgor_chain.h  markov_chain.cc  rember_chain.h  state_coder.h  utils.h
src/impl/header/: source.hpp
src/impl/source/: markov_chain.cpp
src/impl/source/forgor/: sparse_transit.hpp
test/: main.cc  test_encoding_iter.h  test_fenwick_tree.h  test_markov_chain.h  test_state_coder.h  test_utils.h
tests/: instantiate.cc  instantiate.h  main.cc  test_encoding_iter.h  test_fenwick_tree.h  test_forgor_chain.h  test_markov_chain.h  test_rember_chain.h  test_state_coder.h  test_utils.h
